fix bug making recent content overflow container

--- a/client/src/components/diary/ModalRecentContent.module.css
+++ b/client/src/components/diary/ModalRecentContent.module.css
@@ -21,6 +21,6 @@
   background-color: white;
   border: solid 2px #bf7d60;
   width: 90%;
-  height: 90%;
+  height: 24rem;
   overflow: scroll;
 }
